# MLAnnotator

./: .gitignore  CMakeLists.txt  CMakePresets.json  index.html  package-lock.json  package.json  tsconfig.electron.json
.cache/clangd/index/: cvClient.cpp.2DA8AEA6EC0131C7.idx
scripts/: buildCV.js
src/cvClient/: CMakeLists.txt
src/cvClient/core/: cvClient.cpp
src/cvClient/include/: ipc.h
src/cvClient/ipc/: ipc.cpp
src/electron/: main.ts
src/frontend/: App.tsx
